# backend/pokemon-tcg-companion/cards/domain/models/__init__.py
@@ -1,11 +1,13 @@
-from .card import Card, CardAdd, CardUpdate
-from .ref_card import RefCard, RefCardAdd, RefCardUpdate
+from .card import Card, CardAdd, CardRead, CardUpdate
+from .ref_card import RefCard, RefCardAdd, RefCardRead, RefCardUpdate
 
 __all__ = [
     "RefCard",
     "RefCardAdd",
+    "RefCardRead",
     "RefCardUpdate",
     "Card",
     "CardAdd",
+    "CardRead",
     "CardUpdate",
 ]
