# backend/pokemon-tcg-companion/cards/domain/models/card.py
@@ -1,9 +1,9 @@
-from __future__ import annotations
-
 from typing import Optional
 from uuid import UUID, uuid4
 
-from sqlmodel import Field, SQLModel
+from sqlmodel import Field, Relationship, SQLModel
+
+from cards.domain.models.ref_card import RefCard, RefCardRead
 
 
 class CardBase(SQLModel):
@@ -18,6 +18,17 @@ class Card(CardBase, table=True):
         foreign_key="refcard.id", default=None, nullable=True, index=True
     )
     user_id: str = Field(index=True)
+    ref_card: Optional[RefCard] = Relationship(
+        sa_relationship_kwargs={"lazy": "noload"}
+    )
+
+
+class CardRead(SQLModel):
+    id: UUID
+    ref_card_id: Optional[UUID] = None
+    user_id: str
+    image_path: str
+    ref_card: Optional[RefCardRead] = None
 
 
 class CardAdd(CardBase):
