# backend/pokemon-tcg-companion/cards/domain/models/ref_card.py
@@ -22,6 +22,10 @@ class RefCard(RefCardBase, table=True):
     set_id: str = Field(index=True)
 
 
+class RefCardRead(RefCardBase):
+    id: UUID
+
+
 class RefCardAdd(RefCardBase):
     pass
 
